--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -195,3 +195,62 @@ a {
     line-height: 25px;
     padding: 0 10px;
 }
+
+
+/*-----------------About------------------*/
+
+.about {
+    text-align: center;
+    padding: 100px 0;
+}
+
+.about-header h2 {
+    font-size: 42px;
+    color: #474747;
+    margin-bottom: 12px;
+}
+
+.about-header p {
+    font-size: 22px;
+    color: #858585;
+}
+
+.about-content {
+    border-top: 1px solid rgba(144, 144, 144, 0.25);
+    border-bottom: 1px solid rgba(144, 144, 144, 0.25);
+    margin: 60px auto;
+    width: 85%;
+    margin: 60px auto;
+    padding: 60px 0 30px 0;
+    display: flex;
+    justify-content: space-around;
+}
+
+.profile {
+    margin: 60px 0;
+}
+
+.profile img {
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.profile h4 {
+    margin: 8px 0;
+}
+
+.profile p {
+    line-height: 25px;
+}
+
+.about-footer {
+    width: 65%;
+    margin: 0 auto;
+}
+
+.about-footer p {
+    line-height: 25px;
+    font-size: 18px;
+    margin-bottom: 40px;
+    color: #858585;
+}
